--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     provider: ^4.0.4
     http: ^0.12.0+4
     transparent_image: ^1.0.0
+    fluro: ^2.0.3
+
 
 dev_dependencies:
     flutter_test:
