--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     http: ^0.12.0+4
     transparent_image: ^1.0.0
     fluro: ^2.0.3
+    page_transition: ^2.0.2
     
 
 dev_dependencies:
